# pysnaptest

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements.txt
.env/: pyvenv.cfg
.github/workflows/: CI.yml  TESTS.yml
examples/my_project/: pytest.ini  requirements.txt
examples/my_project/my_project/: main.py
examples/my_project/tests/: test_main.py
examples/my_project/tests/snapshots/: pysnaptest__test_main_test_main@pysnap.snap
examples/snapshots/: pysnaptest__test_main_test_main@pysnap.snap
python/pysnaptest/: __init__.py  snapshot.py
src/: lib.rs
src/snapshots/: pysnaptest__tests__into_pyinfo_failure_case.snap
tests/: test_snapshots.py
tests/snapshots/: pysnaptest__test_assert_polars_named_dataframe_binary_snapshot@pysnap.snap  pysnaptest__test_snapshots_test_assert_csv_snapshot@pysnap.snap  pysnaptest__test_snapshots_test_assert_json_snapshot@pysnap.snap  pysnaptest__test_snapshots_test_assert_pandas_dataframe_binary_snapshot@pysnap.snap.parquet  pysnaptest__test_snapshots_test_assert_pandas_dataframe_snapshot@pysnap.snap  pysnaptest__test_snapshots_test_assert_polars_dataframe_snapshot@pysnap.snap  pysnaptest__test_snapshots_test_assert_snapshot@pysnap.snap  pysnaptest__test_snapshots_test_assert_snapshot_multiple_1@pysnap.snap  pysnaptest__test_snapshots_test_assert_snapshot_multiple_2@pysnap.snap  pysnaptest__test_snapshots_test_snapshot_async@pysnap.snap  pysnaptest__test_snapshots_test_snapshot_dict_result@pysnap.snap  pysnaptest__test_snapshots_test_snapshot_list_result@pysnap.snap
