[package]
name = "pysnaptest"
version = "0.1.14"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pysnaptest"
crate-type = ["cdylib"]

[dependencies]
insta = { version = "1.41", features = ["json"] }
pyo3 = { version = "0.23.1", features = ["extension-module"] }
pythonize = "0.23.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
