[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pysnaptest"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.optional-dependencies]
pandas = ["pandas>=0.14.0,<3"]
pyarrow = ["pyarrow>=17.0.0,<20"]
polars = ["polars>=0.18,<2"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "pysnaptest._pysnaptest"
bindings = 'pyo3'

[tool.pytest.ini_options]
testpaths = "tests"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-env>=1.1.5",
    "pytest-asyncio>=0.21.0",
]
